Add code from "Automate Acceptance Tests With Hound"
- Rename `app` docker service to `frontend`
- Use `frontend` as host instead of `0.0.0.0`
- Add `selenium` container as WebDriver

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  app:
+  frontend:
     build:
       target: vscode
     volumes:
@@ -9,5 +9,5 @@ services:
       - vscode-insiders:/home/app-user/.vscode-server-insiders/extensions
 
 volumes:
-  vscode:
-  vscode-insiders:
+  vscode: null
+  vscode-insiders: null
